--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Lawal Omolola</div>
-                <div class="text-3">And i'm a <span class="typing">website designer</span></div>
+                <div class="text-3">And i'm a <span class="typing">Software Engineer</span></div>
                 <a href="#">Hire me</a>
             </div>
         </div>
@@ -58,11 +58,11 @@
                     <img src="img/g.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Omolola and I'm a <span class="typing-2">Web Developer</span></div>
+                    <div class="text">I'm Omolola and I'm a <span class="typing-2">Software Engineer</span></div>
                     <p>I start my career as a fontend developer with 2 years expericences with backend. 
                         Currently i am seeking for oppurtunity to learn and grow, team oriented and a happy workplace. 
                         To know more about me, visit my LinkedIn Profile.</p>
-                    <a href="img/CV_2021-05-05-045400.pdf">Download cv</a>
+                    <a  href="img/ResumeII(1).pdf" target="_blank">Download cv</a>
                 </div>
             </div>
         </div>
@@ -137,8 +137,17 @@
 
                 <div class="bars">
                     <div class="info">
+                        <span>Node.js</span>
+                        <span>50%</span>
+                        
+                    </div>  
+                    <div class="line node"></div> 
+        </div>
+
+                <div class="bars">
+                    <div class="info">
                         <span>REACT</span>
-                        <span>20%</span>
+                        <span>50%</span>
                     </div>
 <div class="line react"></div>
                 </div>
