--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <p>I start my career as a fontend developer with 2 years expericences with backend. 
                         Currently i am seeking for oppurtunity to learn and grow, team oriented and a happy workplace. 
                         To know more about me, visit my LinkedIn Profile.</p>
-                    <a  href="img/cv2.pdf" target="_blank">Download cv</a>
+                    <a  href="img/Omolola Lawal.pdf" target="_blank">Download cv</a>
                 </div>
             </div>
         </div>
