--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,10 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <div class="scroll-up-btn">
         <i class="fa fa-angle-up" aria-hidden="true"></i>
@@ -59,10 +61,8 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Omolola and I'm a <span class="typing-2">Software Engineer</span></div>
-                    <p>I start my career as a fontend developer with 2 years expericences with backend. 
-                        Currently i am seeking for oppurtunity to learn and grow, team oriented and a happy workplace. 
-                        To know more about me, visit my LinkedIn Profile.</p>
-                    <a  href="img/Omolola Lawal.pdf" target="_blank">Download cv</a>
+                    <p>I start my career as a fontend developer with 2 years expericences with backend. Currently i am seeking for oppurtunity to learn and grow, team oriented and a happy workplace. To know more about me, visit my LinkedIn Profile.</p>
+                    <a href="img/Halimah.pdf" target="_blank">Download cv</a>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
                     <div class="box">
                         <i class="fa fa-paint-brush" aria-hidden="true"></i>
                         <div class="text">Web Design</div>
-                        <p>One of my best  services is creatings fantastic website for clients, with a great eye suiting design at the end of the projects.</p>
+                        <p>One of my best services is creatings fantastic website for clients, with a great eye suiting design at the end of the projects.</p>
                     </div>
                 </div>
 
@@ -92,204 +92,207 @@
                 </div>
 
 
-            <div class="card">
-                <div class="box">
-                    <i class="fa fa-code" aria-hidden="true"></i>
-                    <div class="text">Design App</div>
-                    <p>Applications designs, help the developers to meet their business demands. Designing app has been helpfull alot.</p>
+                <div class="card">
+                    <div class="box">
+                        <i class="fa fa-code" aria-hidden="true"></i>
+                        <div class="text">Design App</div>
+                        <p>Applications designs, help the developers to meet their business demands. Designing app has been helpfull alot.</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
     </section>
-<section class="skills" id="skills">
-    <div class="max-width">
-        <h2 class="title">My Skills</h2>
-        <div class="skills-content">
-            <div class="column left">
-<div class="text">My Creative Skills And & Experience.</div>
-<p>I’m a front end developer, and I learned to code through a bootcamp. After spending six days a week, twelve or more hours a day, for five months learning front end development, UI design, and UX design, I was ready to graduate and start working. But there was one thing left to do in order to complete my program — build a portfolio. At that time, I was fighting burnout and a substantial inclination to binge-watch every show I had put on pause for five months. Now, two years later, I could not be more grateful that I took the time to build a portfolio to showcase my projects and my new skills.</p>
-<a href="#">Read More</a>
-            </div>
-            <div class="column right">
-                <div class="bars">
-                    <div class="info">
-                        <span>HTML</span>
-                        <span>90%</span>
-                    </div>
-<div class="line html"></div>
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">My Skills</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text">My Creative Skills And & Experience.</div>
+                    <p>I’m a front end developer, and I learned to code through a bootcamp. After spending six days a week, twelve or more hours a day, for five months learning front end development, UI design, and UX design, I was ready to graduate and
+                        start working. But there was one thing left to do in order to complete my program — build a portfolio. At that time, I was fighting burnout and a substantial inclination to binge-watch every show I had put on pause for five months.
+                        Now, two years later, I could not be more grateful that I took the time to build a portfolio to showcase my projects and my new skills.</p>
+                    <a href="#">Read More</a>
                 </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
                             <span>70%</span>
                         </div>
-<div class="line css"></div>
+                        <div class="line css"></div>
                     </div>
-                        <div class="bars">
+                    <div class="bars">
+                        <div class="info">
+                            <span>JAVASCRIPT</span>
+                            <span>50%</span>
+
+                        </div>
+                        <div class="line Js"></div>
+                    </div>
+
+                    <div class="bars">
+                        <div class="info">
+                            <span>Node.js</span>
+                            <span>50%</span>
+
+                        </div>
+                        <div class="line node"></div>
+                    </div>
+
+                    <div class="bars">
+                        <div class="info">
+                            <span>REACT</span>
+                            <span>50%</span>
+                        </div>
+                        <div class="line react"></div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="teams" id="teams">
+        <div class="max-width">
+            <h1 class="title">My Teams</h1>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                        <img src="img/k.jpg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <img src="img/m (4).jpg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="box">
+                        <img src="img/m (3).jpg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="box">
+                        <img src="img/m (3).jpg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="box">
+                        <img src="img/m (3).jpg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <img src="img/m (2).jpg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <img src="img/m (1).jpg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Contact Me</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="text">Get in Touch</div>
+                    <p>You can get in touch with me on Linkedin and other social media platforms.</p>
+                    <div class="icons">
+                        <div class="row">
+                            <i class="fa fa-user" aria-hidden="true"></i>
                             <div class="info">
-                                <span>JAVASCRIPT</span>
-                                <span>50%</span>
-                                
-                            </div>  
-                            <div class="line Js"></div> 
-                </div>
+                                <div class="head">Name</div>
+                                <div class="sub-title">Lawal Omolola</div>
+                            </div>
+                        </div>
 
-                <div class="bars">
-                    <div class="info">
-                        <span>Node.js</span>
-                        <span>50%</span>
-                        
-                    </div>  
-                    <div class="line node"></div> 
-        </div>
+                        <div class="row">
+                            <i class="fa fa-map-marker" aria-hidden="true"></i>
+                            <div class="info">
+                                <div class="head">Address</div>
+                                <div class="sub-title">Lagos, Nigeria</div>
+                            </div>
+                        </div>
 
-                <div class="bars">
-                    <div class="info">
-                        <span>REACT</span>
-                        <span>50%</span>
+                        <div class="row">
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                            <div class="info">
+                                <div class="head">Email</div>
+                                <div class="sub-title">omololaalimat22@gmail.com
+                                </div>
+                            </div>
+                        </div>
                     </div>
-<div class="line react"></div>
                 </div>
+                <div class="column right">
+                    <div class="text">Message me</div>
+                    <form action="#">
+                        <div class="fields">
+                            <div class="field name">
+                                <input type="text" placeholder="Name" required>
+                            </div>
+                            <div class="field email">
+                                <input type="email" placeholder="Email" required>
+                            </div>
+                        </div>
 
+                        <div class="field">
+                            <input type="text" placeholder="Subject" required>
+                        </div>
+
+                        <div class="field textarea">
+                            <textarea cols="30" rows="10" placeholder="Describe project.." required></textarea>
+                        </div>
+                        <div class="button">
+                            <button type="submit">Send message</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-</section>
-
-
-<section class="teams" id="teams">
-<div class="max-width">
-    <h1 class="title">My Teams</h1>
-    <div class="carousel owl-carousel">
-        <div class="card">
-            <div class="box">
-<img src="img/k.jpg" alt="">
-<div class="text">Someone name</div>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="box">
-<img src="img/m (4).jpg" alt="">
-<div class="text">Someone name</div>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    </div>
-</div>
-
-
-<div class="card">
-    <div class="box">
-<img src="img/m (3).jpg" alt="">
-<div class="text">Someone name</div>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-</div>
-</div>
-
-
-<div class="card">
-    <div class="box">
-<img src="img/m (3).jpg" alt="">
-<div class="text">Someone name</div>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-</div>
-</div>
-
-
-<div class="card">
-    <div class="box">
-<img src="img/m (3).jpg" alt="">
-<div class="text">Someone name</div>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-</div>
-</div>
-
-<div class="card">
-    <div class="box">
-<img src="img/m (2).jpg" alt="">
-<div class="text">Someone name</div>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-</div>
-</div>
-
-<div class="card">
-    <div class="box">
-<img src="img/m (1).jpg" alt="">
-<div class="text">Someone name</div>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-</div>
-</div>
-</div>
-</div>
-</section>
-
-
-<section class="contact" id="contact">
-    <div class="max-width">
-    <h2 class="title">Contact Me</h2>
-    <div class="contact-content">
-    <div class="column left"> 
-        <div class="text">Get in Touch</div>
-        <p>You can get in touch with me on Linkedin and other social media platforms.</p>
-        <div class="icons">
-            <div class="row">
-                <i class="fa fa-user" aria-hidden="true"></i>
-              <div class="info">
-                  <div class="head">Name</div>
-                  <div class="sub-title">Lawal Omolola</div>
-              </div>  
-            </div>
-
-            <div class="row">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-              <div class="info">
-                  <div class="head">Address</div>
-                  <div class="sub-title">Lagos, Nigeria</div>
-              </div>  
-            </div>
-
-            <div class="row">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-              <div class="info">
-                  <div class="head">Email</div>
-                  <div class="sub-title">omololaalimat22@gmail.com
-                  </div>
-              </div>  
-            </div>
-        </div>
-    </div>
-        <div class="column right">
-            <div class="text">Message me</div>
-            <form action="#">
-                <div class="fields">
-                <div class="field name">
-                    <input type="text" placeholder="Name" required>
-                </div>
-                <div class="field email">
-                <input type="email" placeholder="Email" required>
-                </div>
-                </div>
-
-                <div class="field">
-                    <input type="text" placeholder="Subject" required>
-                    </div>
-
-                    <div class="field textarea">
-                    <textarea cols="30" rows ="10" placeholder = "Describe project.." required></textarea>
-                </div>
-                <div class="button">
-                    <button type="submit">Send message</button>
-                </div> 
-            </form>
-        </div>
-      </div>
-     </div>    
-</section>
-<footer>
-    <span>Created By</span><a href="#">CodingNepal</a> | <span class="fa fa-copyright" aria aria-hidden="true">2021 All rights reserved.</span>
-</footer>
+    </section>
+    <footer>
+        <span>Created By</span><a href="#">CodingNepal</a> | <span class="fa fa-copyright" aria aria-hidden="true">2021 All rights reserved.</span>
+    </footer>
     <script src="main.js"></script>
     <script src="simple.js"></script>
 </body>
+
 </html>
