--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="column right">
                     <div class="text">I'm Omolola and I'm a <span class="typing-2">Software Engineer</span></div>
                     <p>I start my career as a fontend developer with 2 years expericences with backend. Currently i am seeking for oppurtunity to learn and grow, team oriented and a happy workplace. To know more about me, visit my LinkedIn Profile.</p>
-                    <a href="img/Halimah.pdf" target="_blank">Download cv</a>
+                    <a href="img/Lawal.O.pdf" target="_blank">Download cv</a>
                 </div>
             </div>
         </div>
