--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="column right">
                     <div class="text">I'm Omolola and I'm a <span class="typing-2">Software Engineer</span></div>
                     <p>I start my career as a fontend developer with 2 years expericences with backend. Currently i am seeking for oppurtunity to learn and grow, team oriented and a happy workplace. To know more about me, visit my LinkedIn Profile.</p>
-                    <a href="img/Lawal.O.pdf" target="_blank">Download cv</a>
+                    <a href="img/Halimah.O.pdf" target="_blank">Download cv</a>
                 </div>
             </div>
         </div>
@@ -289,7 +289,7 @@
         </div>
     </section>
     <footer>
-        <span>Created By</span><a href="#">CodingNepal</a> | <span class="fa fa-copyright" aria aria-hidden="true">2021 All rights reserved.</span>
+        <span>Created By</span><a href="#">Lawal.O</a> | <span class="fa fa-copyright" aria aria-hidden="true">2021 All rights reserved.</span>
     </footer>
     <script src="main.js"></script>
     <script src="simple.js"></script>
